change logo and footer style

--- a/themes/hexo-theme-Amie/layout/partial/head.jade
+++ b/themes/hexo-theme-Amie/layout/partial/head.jade
@@ -22,4 +22,5 @@ link(rel="short icon", href="/images/favicon.png",type="image/x-icon")
 link(rel="stylesheet", href= url_for('css/style.css'))
 link(rel="stylesheet", href= url_for('css/blog_basic.css'))
 link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
+link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text|Source+Sans+Pro:200,300,400,600,700,900")
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
