--- a/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
@@ -13,6 +13,11 @@
   .logo-title{
     text-align: center;
     padding-top:240px;
+    a {
+        background: linear-gradient(330deg, #e052a0 50%, #f15c41 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 
 
     .description {
