refactor blog css and change to darker scheme

--- a/themes/hexo-theme-Amie/source/css/scss/base.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/base.scss
@@ -22,10 +22,10 @@ a:link, a:visited {
   -o-transition: all .15s linear;
   -ms-transition: all .15s linear;
   transition: all .15s linear;
-  color: #424242;
+  color: $link-color;
 
 }
 
 a:hover, a:active {
-  color: #4786D6;
+  color: $link-hover-color;
 }
