--- a/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
@@ -8,7 +8,7 @@
   left:0;
   position: fixed;
   z-index: 4;
-  border-right: 1px solid #f2f2f2;
+  border-right: 1px solid $page-border-color;
 
   .logo-title{
     text-align: center;
