--- a/themes/hexo-theme-Amie/source/css/scss/variable.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/variable.scss
@@ -1,2 +1,7 @@
 $background-color: #080708;
 $body-font-color: #50596C;
+$page-border-color: #191619;
+$link-color: #e91e63;
+$link-hover-color: #f06292;
+$link-current-color: #673AB7;
+$pre-background-color: #171417;
