--- a/themes/hexo-theme-Amie/source/css/scss/post.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/post.scss
@@ -1,35 +1,24 @@
 .post {
   margin: 30px;
 
+  h1,h2,h3,h4 {
+    color: $link-current-color;
+  }
+
   .post-title{
     h3 {
       margin:0;
     }
+    a {
+      color: $link-current-color;
+    }
   }
 
-  .post-content{
-    a {
-      text-decoration: none;
-      letter-spacing: 1px;
-      color: #4786D6;
-    }
-    a:hover{
-      color: #2F69B3;
-    }
-    h3{
-      color: #5F5F5F;
-      font-size:22px;
-      font-weight:600;
-    }
-    h4 {
-      color: #5F5F5F;
-      font-size:16px;
-    }
-  }
+
 
   .post-footer {
     padding: 0 0 30px 0;
-    border-bottom: 1px solid #f2f2f2;
+    border-bottom: 1px solid $page-border-color;
 
 
     .meta {
