--- a/themes/hexo-theme-Amie/source/css/scss/page-top.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/page-top.scss
@@ -25,7 +25,7 @@
       padding-right:20px;
     }
     a {
-      color: $link-color;
+      color: $link-secondary-color;
     }
     a:hover{
       color: $link-hover-color;
