add border shadow to tone down the edges

--- a/themes/hexo-theme-Amie/layout/partial/footer.jade
+++ b/themes/hexo-theme-Amie/layout/partial/footer.jade
@@ -1,5 +1,5 @@
 .footer
   a(target="_blank", href="/")
-    span Copyright by  
-  a(href="/")  Amie Chen 2017
+    span Site designed by
+  a(href="/")  © 2017 AMIE CHEN, All rights reserved.
   a(href="/archives")=' Archive'
