--- a/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
+++ b/themes/hexo-theme-Amie/source/css/scss/sidebar.scss
@@ -8,7 +8,7 @@
   left:0;
   position: fixed;
   z-index: 4;
-  border-right: 1px solid $page-border-color;
+  box-shadow: 5px 0px 35px -2px #101113;
 
   .logo-title{
     text-align: center;
