make changes to footer

--- a/themes/hexo-theme-Amie/layout/partial/footer.jade
+++ b/themes/hexo-theme-Amie/layout/partial/footer.jade
@@ -1,5 +1,6 @@
 .footer
   a(target="_blank", href="/")
-    span Site designed by
-  a(href="/")  © 2017 AMIE CHEN, All rights reserved.
-  a(href="/archives")=' Archive'
+    span © 2017 Amie Chen
+      br
+      | All rights reserved.
+  //- a(href="/archives")=' Archive'
