update national park post and restyle image in post

--- a/themes/hexo-theme-phantom/source/sass/components/_gallery.scss
+++ b/themes/hexo-theme-phantom/source/sass/components/_gallery.scss
@@ -1,7 +1,9 @@
 #main {
 
   .inner {
-
+    img {
+      border: 5px solid _palette(image-border);
+    }
     .gallery-container{
       width: 100%;
       display: block;
