--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ button.btn--isSelected {
 .header h1 {
   flex: 1;
   padding-top: 0.4rem;
+  font-weight: 500;
 }
 .filter {
   margin-bottom: 1rem;
@@ -82,24 +83,39 @@ button.btn--isSelected {
   margin-right: 0.4rem;
 }
 .preview {
-  width: 30%;
-  padding: 2rem;
+  width: 20%;
+  padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
+  min-width: 260px;
+}
+.instruction {
+  color: #a5b6c8;
+  font-size: 0.8rem;
 }
 .filterableSnippets {
   background-color: white;
   padding: 2rem;
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 .droppable {
   flex: 1;
 }
+.droppable .snippet {
+  margin-bottom: -1px;
+}
+.snippets {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 1rem;
+}
 .snippet {
   border: 1px solid #e9eff4;
-  border-radius: 4px;
   padding: 1rem;
   background: #ffffff;
+  margin-bottom: 1rem;
 }
 .snippet.snippet--isSelected {
   border: 1px solid #89937a;
