--- a/scss/stitches.scss
+++ b/scss/stitches.scss
@@ -24,6 +24,7 @@ h6 {
   line-height: 1.2;
   margin-bottom: 0;
   margin-top: 0;
+  font-weight: 500;
 }
 h1 {
   font-size: 2rem;
@@ -31,6 +32,7 @@ h1 {
 
 h2 {
   font-size: 1.6rem;
+  line-height: 2;
 }
 h3 {
   font-size: 1.4rem;
@@ -53,6 +55,7 @@ img {
   width: 100%;
   border-style: none;
 }
+
 /* content */
 .st-content-1 {
   text-align: center;
