--- a/stitches.css
+++ b/stitches.css
@@ -22,13 +22,15 @@ h5,
 h6 {
   line-height: 1.2;
   margin-bottom: 0;
-  margin-top: 0; }
+  margin-top: 0;
+  font-weight: 500; }
 
 h1 {
   font-size: 2rem; }
 
 h2 {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  line-height: 2; }
 
 h3 {
   font-size: 1.4rem; }
