add button for snippet

--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ button.btn--isSelected {
   border-color: #89937a;
   transition: 1s;
 }
+.snippet * {
+  font-size: calc(1.2rem / 4);
+}
 .snippet h1 {
   font-size: calc(2rem / 4);
 }
@@ -147,6 +150,12 @@ button.btn--isSelected {
 .snippet h6 {
   font-size: calc(0.8rem / 4);
 }
+.snippet button:hover {
+  transform: none;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
 .snippet.snippet--isSelected {
   border: 1px solid #89937a;
   box-shadow: 3px 3px 10px rgba(77, 161, 255, 0.07);
