--- a/scss/stitches.scss
+++ b/scss/stitches.scss
@@ -1,3 +1,5 @@
+$brand-primary: #89937a;
+
 html,
 body {
   height: 100%;
@@ -68,4 +70,13 @@ img {
 }
 .st-content-4 {
   text-align: center;
+}
+/* button */
+.st-button {
+  border: 1px solid $brand-primary;
+  padding: 0.3em 0.6em 0.2em 0.6em;
+  border-radius: 2px;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
 }
