--- a/stitches.css
+++ b/stitches.css
@@ -66,4 +66,13 @@ img {
 .st-content-4 {
   text-align: center; }
 
+/* button */
+.st-button {
+  border: 1px solid #89937a;
+  padding: 0.3em 0.6em 0.2em 0.6em;
+  border-radius: 2px;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer; }
+
 /*# sourceMappingURL=stitches.css.map */
