--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ button.btn--isSelected {
   margin-right: 0.4rem;
 }
 .preview {
-  width: 20%;
-  padding: 1rem 2rem;
+  width: 30%;
+  padding: 1rem 1.5rem;
   display: flex;
   flex-direction: column;
   min-width: 260px;
@@ -96,7 +96,7 @@ button.btn--isSelected {
 }
 .filterableSnippets {
   background-color: white;
-  padding: 1.8rem 2rem;
+  padding: 1.8rem 1.5rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -109,27 +109,25 @@ button.btn--isSelected {
   margin-bottom: -1px;
 }
 .snippets {
-  column-count: 3;
+  column-count: 2;
   column-gap: 10px;
-  height: 100vh;
+  overflow-y: scroll;
 }
 .snippet {
   border: 1px solid #e9eff4;
-  padding: 1rem;
-  background: #ffffff;
   margin-bottom: 10px;
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
   break-inside: avoid;
   cursor: -webkit-grab;
   cursor: grab;
-  font-size: calc(1.2rem / 4);
+  /*  font-size: calc(1.2rem / 4);*/
 }
 .snippet:hover {
   border-color: #89937a;
   transition: 1s;
 }
-.snippet * {
+/*.snippet * {
   font-size: calc(1.2rem / 4);
 }
 .snippet h1 {
@@ -162,4 +160,4 @@ button.btn--isSelected {
 .snippet.snippet--isSelected {
   border: 1px solid #89937a;
   box-shadow: 3px 3px 10px rgba(77, 161, 255, 0.07);
-}
+}*/
