--- a/scss/stitches.scss
+++ b/scss/stitches.scss
@@ -1,86 +1,5 @@
 $brand-primary: #89937a;
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-html {
-  font-size: 20px;
-  box-sizing: border-box;
-  line-height: 1.5;
-}
-body {
-  font-size: 0.8rem;
-  text-rendering: optimizeLegibility;
-  overflow-x: hidden;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  line-height: 1.2;
-  margin-bottom: 0;
-  margin-top: 0;
-  font-weight: 500;
-}
-h1 {
-  font-size: 2rem;
-}
-
-h2 {
-  font-size: 1.6rem;
-  line-height: 2;
-}
-h3 {
-  font-size: 1.4rem;
-}
-h4 {
-  font-size: 1.2rem;
-}
-h5 {
-  font-size: 1rem;
-}
-h6 {
-  font-size: 0.8rem;
-}
-figure {
-  display: block;
-  margin: 0;
-}
-img {
-  object-fit: cover;
-  width: 100%;
-  border-style: none;
-}
-
-/* content */
-.content {
-  padding: 2rem;
-}
-.content--center {
-  text-align: center;
-}
-.content--left {
-  text-align: left;
-}
-.content--right {
-  text-align: right;
-}
-
-/* button */
-.button {
-  border: 1px solid $brand-primary;
-  padding: 0.3em 0.6em 0.2em 0.6em;
-  border-radius: 2px;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-}
-.figure {
-  margin-top: 1em;
-}
+@import "partials/base";
+@import "partials/nav-1";
+@import "partials/nav-2";
