--- a/templates/header-2.html
+++ b/templates/header-2.html
@@ -1,12 +1,4 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href=./public/stitches.css>
-    <title>Stitches</title>
-  </head>
-  <body class="st"><header class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
+<header class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
   <a href="/" class="block text-left">
     <img src="https://www.dropbox.com/s/9j8w256edoluop9/hyperyolo.jpeg?dl=0" class="h-12 sm:h-12 rounded-full" alt="avatar">
   </a>
@@ -18,9 +10,4 @@
     Button
     </button>
   </ul>
-</header><header class="font-sans bg-white text-center my-4 mx-auto max-w-sm overflow-hidden">
-  <img src="https://www.dropbox.com/s/9j8w256edoluop9/hyperyolo.jpeg?dl=0" class="h-16 sm:h-24 my-4 rounded-full" alt="avatar">
-  <p class="text-xl">Hyperyolo</p>
-  <p class="text-sm text-grey-dark leading-loose">twitter/@hyperyolo</p>
-</header></body>
-</html>
+</header>
