--- a/templates/nav-2.html
+++ b/templates/nav-2.html
@@ -1,6 +1,6 @@
-<header class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
+<nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
   <a href="/" class="block text-left">
-    <img src="https://www.dropbox.com/s/9j8w256edoluop9/hyperyolo.jpeg?dl=0" class="h-12 sm:h-12 rounded-full" alt="avatar">
+    <img src="https://randomuser.me/api/portraits/women/44.jpg" class="h-12 sm:h-12 rounded-full" alt="avatar">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
@@ -10,4 +10,4 @@
     Button
     </button>
   </ul>
-</header>
+</nav>
