--- a/templates/nav-1.html
+++ b/templates/nav-1.html
@@ -1,5 +1,14 @@
-<nav class="font-sans bg-white text-center my-4 mx-auto max-w-sm overflow-hidden">
-  <img src="https://randomuser.me/api/portraits/women/44.jpg" class="h-16 sm:h-24 my-4 rounded-full" alt="avatar">
-  <p class="text-xl">Hyperyolo</p>
-  <p class="text-sm text-grey-dark leading-loose">twitter/@hyperyolo</p>
+<nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto max-w-xl overflow-hidden">
+  <a href="/" class="block text-left">
+    <img src="./logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
+  </a>
+  <ul class="text-sm text-grey-dark list-reset flex items-center">
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
+    <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
+    <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
+    <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+    Sign Up
+    </button>
+  </ul>
 </nav>
