--- a/templates/nav-4.html
+++ b/templates/nav-4.html
@@ -1,17 +1,19 @@
 <nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto max-w-xl overflow-hidden">
-  <button class="bg-transparent text-sm hover:text-grey-dark text-grey-darkest py-2 px-3 rounded">
-  Subscribe
-  </button>
+  <a href="#">
+    <img src="./logo.png" class="h-10" alt="logo">
+  </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
-    <li class="px-6"><a href="/" >
-      <img src="./logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
-    </a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About Us</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Status</a></li>
   </ul>
-  <button class="text-sm bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
-  Log In
-  </button>
+  <ul class="text-sm text-grey-dark list-reset flex items-center">
+    <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
+    <li>
+      <button class="bg-grey-darkest hover:bg-grey-darker text-white ml-4 py-2 px-3 rounded">
+      Sign Up
+      </button>
+    </li>
+  </ul>
 </nav>
