--- a/templates/footer-3.html
+++ b/templates/footer-3.html
@@ -1,7 +1,7 @@
 <footer class="font-sans bg-black text-white py-8 px-4">
   <div class="mx-auto max-w-xl overflow-hidden flex flex-col lg:flex-row justify-between">
     <a href="/" class="block mr-4 w-1/2">
-      <img src="./logo-white.png" class="w-32" alt="logo">
+      <img src="./logo-white.png" class="" alt="logo">
     </a>
     <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
