--- a/public/stitches.css
+++ b/public/stitches.css
@@ -8492,6 +8492,34 @@ button,
   color: #8795a1;
 }
 
+.order-first {
+  order: -1;
+}
+
+.order-0 {
+  order: 0;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
+}
+
+.order-4 {
+  order: 4;
+}
+
+.order-last {
+  order: 99999;
+}
+
 @media (min-width: 320px) {
   .xs\:list-reset {
     list-style: none;
