--- a/stitches.css
+++ b/stitches.css
@@ -13,3 +13,30 @@
   transition: all 0.1s ease-in-out;
   color: #8795a1;
 }
+
+.order-first {
+  order: -1;
+}
+
+.order-0 {
+  order: 0;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
+}
+
+.order-4 {
+  order: 4;
+}
+.order-last {
+  order: 99999;
+}
