add list template

--- a/templates/list-1.html
+++ b/templates/list-1.html
@@ -1,12 +1,50 @@
-<ul class="list-reset">
-  <li class="inline-block border-b border-grey-light flex">
-    <div class="border">
-      <svg class="fill-current text-teal inline-block h-12 w-12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-        <path d="M18 9.87V20H2V9.87a4.25 4.25 0 0 0 3-.38V14h10V9.5a4.26 4.26 0 0 0 3 .37zM3 0h4l-.67 6.03A3.43 3.43 0 0 1 3 9C1.34 9 .42 7.73.95 6.15L3 0zm5 0h4l.7 6.3c.17 1.5-.91 2.7-2.42 2.7h-.56A2.38 2.38 0 0 1 7.3 6.3L8 0zm5 0h4l2.05 6.15C19.58 7.73 18.65 9 17 9a3.42 3.42 0 0 1-3.33-2.97L13 0z"/>
-      </svg>
+<ul class="list-reset mx-auto max-w-xl text-sm text-grey-darkest">
+  <li class="inline-block border-b border-grey-light flex justify-between items-center py-4">
+    <div class="flex items-start w-2/5">
+      <div class="w-10 h-10 rounded mr-3">
+        <div class="rounded-full h-10 w-10 bg-grey-light m-auto"></div>
+      </div>
+      <div class="flex-1 overflow-hidden">
+        <div>
+          <span class="font-bold">Logan Slayer</span>
+          <span class="text-grey-dark text-xs">@logan</span>
+        </div>
+        <p class="text-black leading-normal">1-324-352-3000</p>
+      </div>
     </div>
-    <label for="">spodifh</label>
-    <p>wagpaoih spdoifh woeif sodifh ee</p>
-    <label for="">$03</label>
+    <p class="w-2/5">UI/UX Designer @Squarespace.</p>
+    <label for="status" class="font-bold w-1/5 text-right">Active</label>
+  </li>
+  <li class="inline-block border-b border-grey-light flex justify-between items-center py-4">
+    <div class="flex items-start w-2/5">
+      <div class="w-10 h-10 rounded mr-3">
+        <div class="rounded-full h-10 w-10 bg-grey-light m-auto"></div>
+      </div>
+      <div class="flex-1 overflow-hidden">
+        <div>
+          <span class="font-bold">Sarah Mann</span>
+          <span class="text-grey-dark text-xs">@sarah</span>
+        </div>
+        <p class="text-black leading-normal">1-324-111-0000</p>
+      </div>
+    </div>
+    <p class="w-2/5">Web security expert at cloudflare</p>
+    <label for="status" class="font-bold w-1/5 text-right">Inactive</label>
+  </li>
+  <li class="inline-block flex justify-between items-center py-4">
+    <div class="flex items-start w-2/5">
+      <div class="w-10 h-10 rounded mr-3">
+        <div class="rounded-full h-10 w-10 bg-grey-light m-auto"></div>
+      </div>
+      <div class="flex-1 overflow-hidden">
+        <div>
+          <span class="font-bold">Kotlin Lee</span>
+          <span class="text-grey-dark text-xs">@kotlin</span>
+        </div>
+        <p class="text-black leading-normal">1-332-435-1322</p>
+      </div>
+    </div>
+    <p class="w-2/5">System admin at Drip.</p>
+    <label for="status" class="font-bold w-1/5 text-right">Active</label>
   </li>
 </ul>
