add progress bar template

--- a/public/stitches.css
+++ b/public/stitches.css
@@ -8520,6 +8520,11 @@ button,
   order: 99999;
 }
 
+.-translate-50-50 {
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
 @media (min-width: 320px) {
   .xs\:list-reset {
     list-style: none;
