--- a/templates/list-1.html
+++ b/templates/list-1.html
@@ -1,4 +1,4 @@
-<ul class="list-reset mx-auto max-w-xl text-sm text-grey-darkest">
+<ul class="font-sans list-reset mx-auto max-w-xl text-sm text-grey-darkest">
   <li class="inline-block border-b border-grey-light flex justify-between items-center py-4">
     <div class="flex items-start w-2/5">
       <div class="w-10 h-10 rounded mr-3">
