--- a/templates/progressbar-1.html
+++ b/templates/progressbar-1.html
@@ -1,4 +1,4 @@
-<section class="flex justify-between mt-6 mx-auto max-w-xl">
+<section class="font-sans flex justify-between mt-6 mx-auto max-w-xl">
   <a href="#" class="w-1/4 flex flex-col items-center text-center text-xs text-black no-underline">
     <div class="bg-black text-white rounded-full h-8 w-8 flex items-center justify-center mb-2 z-10"><i class="fas fa-check"></i></div>
     <label class="font-bold uppercase tracking-wide">Step 1</label>
